fixed box alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,12 +126,6 @@ p.progress-level {
     width: 500px;
     height: 500px;
   }
-
-  .overlay, .overlay2 {
-      top: 170px;
-      width: 180px;
-      height: 180px;
-  }
   
 
   /*----RESEARCH SECTION----*/
@@ -178,17 +172,6 @@ p.progress-level {
   h5.research {
     font-size: 18px;
     line-height: 32px;
-  }
-
-  .box {
-    width:80%;
-    height: 50%;
-  }
-  
-  .box2 {
-    width:80%;
-    height: 50%;
-    top: 100px;
   }
 
   #home-card {
@@ -269,11 +252,6 @@ p.progress-level {
   i.facebook {
     font-size: 26px;
   }
-}
-
-@media (min-width: 1260px) {
-    
-
 }
 
 
